# YAMCProject

./: CMakeLists.txt  README.md
docker/: dev.Dockerfile
src/example-module/: CMakeLists.txt
src/example-module/cmake/: config.cmake.in
src/example-module/include/ExampleModule/: ExampleModule.h
src/example-module/src/: ExampleModule.cpp
src/executable/: CMakeLists.txt
src/executable/src/: main.cpp
tests/: CMakeLists.txt
tests/testcases/: CMakeLists.txt
tests/testcases/src/: TestExample.cpp
